# APEX-GPU

./: ACHIEVEMENTS.md  AMD_DEPLOYMENT_CHECKLIST.md  APEX_ML_SUMMARY.md  APEX_PROFILING_GUIDE.md  BUILD_AND_INSTALL.md  BUILD_STATUS.md  CMakeLists.txt  COMPLETE_DEPLOYMENT_GUIDE.md  CUBLAS_BRIDGE_STATUS.md  CUDA_FUNCTION_ADDRESS_MAP.txt  DEPLOYMENT_STATUS.txt  DEPLOY_AMD_MI300X.md  DEPLOY_TO_AMD.md  Driver_TEst.md  HACKERNEWS_LAUNCH.md  HIP_BRIDGE_README.md  INDEX.md  ISSUE_4_FIX.md  LICENSE  QUICKSTART.md  QUICK_DEPLOY_MI300X.md  QUICK_REFERENCE.md  README.md  REAL_WORLD_APPS_TESTING.md  ROADMAP.md  SECURITY_ASSESSMENT.md  SIMULATION_TEST_REPORT.md  START_HERE.txt  TEST_SUITE_STATUS.md  WHILE_WAITING_FOR_AMD.md  apex.c  apex.h  apex_advanced.c  apex_complete.c  apex_complete_clean.c  apex_cublas_bridge.c  apex_cuda_complete.c  apex_cuda_driver.c  apex_cuda_driver.h  apex_cuda_intercept.c  (+82 more)
NVIDIA/: COMPLETE_CUDA_API_MAP.txt  INSTALL_PATCHED_CUDA.md  QUICK_INSTALL.sh
NVIDIA/DriverPatch/: INSTALLATION_GUIDE.md  PATCH_REPORT.md  READY_TO_INSTALL.md  SM120_LOCKOUT_PROOF.md  install_patched_cuda.sh  verify_patch.py
NVIDIA/files/: APEX_EXECUTIVE_SUMMARY.md  VISUAL_ARCHITECTURE.txt
